--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,12 +2,14 @@ name: Build and Release Rust Library
 
 on:
   push:
-    tags: ['v*']  # 当推送v开头的tag时触发
-  workflow_dispatch:  # 允许手动触发
+    branches: [ main ]  # 主分支推送时构建
+  workflow_dispatch:     # 允许手动触发
+  release:
+    types: [published]  # 当创建发布时触发
 
 env:
   CARGO_NET_GIT_FETCH_WITH_CLI: true
-  RUSTFLAGS: "-A warnings"  # 允许警告，不阻止构建
+  RUSTFLAGS: "-A warnings"
 
 jobs:
   build:
@@ -34,6 +36,42 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0  # 获取所有提交历史用于版本计算
+
+    - name: Get version from tag or generate
+      id: get_version
+      shell: bash
+      run: |
+        # 如果有标签，使用标签版本
+        if [[ $GITHUB_REF == refs/tags/* ]]; then
+          VERSION=${GITHUB_REF#refs/tags/}
+          echo "Using tag version: $VERSION"
+        # 如果是发布事件，使用发布版本
+        elif [[ $GITHUB_EVENT_NAME == "release" ]]; then
+          VERSION=${{ github.event.release.tag_name }}
+          echo "Using release version: $VERSION"
+        else
+          # 否则自动生成版本号（从v0.0.1开始递增）
+          LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
+          echo "Latest tag: $LATEST_TAG"
+          
+          # 提取版本号并递增
+          if [[ $LATEST_TAG =~ ^v([0-9]+)\.([0-9]+)\.([0-9]+)$ ]]; then
+            MAJOR=${BASH_REMATCH[1]}
+            MINOR=${BASH_REMATCH[2]}
+            PATCH=${BASH_REMATCH[3]}
+            PATCH=$((PATCH + 1))
+            VERSION="v${MAJOR}.${MINOR}.${PATCH}"
+          else
+            # 如果没有有效标签，从v0.0.1开始
+            VERSION="v0.0.1"
+          fi
+          echo "Generated version: $VERSION"
+        fi
+        
+        echo "version=$VERSION" >> $GITHUB_OUTPUT
+        echo "Final version: $VERSION"
 
     - name: Install Rust
       uses: actions-rust-lang/setup-rust-toolchain@v1
@@ -79,76 +117,111 @@ jobs:
         
         echo "Found library: $LIB_FILE"
         
-        # 准备发布文件名
-        if [[ $GITHUB_REF == refs/tags/* ]]; then
-          VERSION=${GITHUB_REF#refs/tags/v}
-        else
-          VERSION="${GITHUB_SHA:0:7}"
-        fi
-        
-        PACKAGE_NAME=$(cargo metadata --no-deps --format-version=1 | jq -r '.packages[0].name' 2>/dev/null || echo "CatSeedLogin-rust")
-        ARTIFACT_NAME="${PACKAGE_NAME}_${{ matrix.artifact_name }}_${VERSION}.${{ matrix.file_extension }}"
+        # 准备文件名
+        PACKAGE_NAME=$(cargo metadata --no-deps --format-version=1 | jq -r '.packages[0].name' 2>/dev/null || echo "CatSeedLogin")
+        ARTIFACT_NAME="${PACKAGE_NAME}_${{ matrix.artifact_name }}_${{ steps.get_version.outputs.version }}.${{ matrix.file_extension }}"
         
         mkdir -p dist
         cp "$LIB_FILE" "dist/$ARTIFACT_NAME"
         echo "artifact_name=$ARTIFACT_NAME" >> $GITHUB_ENV
+        echo "version=${{ steps.get_version.outputs.version }}" >> $GITHUB_ENV
 
-    - name: Upload artifact
+    - name: Upload to GitHub Artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: ${{ matrix.artifact_name }}-library
+        name: CatSeedLogin-${{ steps.get_version.outputs.version }}-${{ matrix.artifact_name }}
         path: dist/${{ env.artifact_name }}
-        retention-days: 5
+        retention-days: 30
 
+  # 创建 GitHub Release（可选，如果仍需发布）
   create-release:
-    name: Create Release
+    name: Create GitHub Release
     runs-on: ubuntu-latest
     needs: build
-    # 修改条件：手动触发时也创建发布
-    if: always() && (needs.build.result == 'success' || needs.build.result == 'skipped')
+    # 只在有标签或发布事件时创建Release
+    if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'release'
     
     steps:
-    - name: Check if we should create release
-      id: check_release
-      shell: bash
-      run: |
-        # 检查是否有构建成功的构件
-        if [[ "${{ github.event_name }}" == "workflow_dispatch" ]] || [[ "$GITHUB_REF" == refs/tags/* ]]; then
-          echo "should_create_release=true" >> $GITHUB_OUTPUT
-        else
-          echo "should_create_release=false" >> $GITHUB_OUTPUT
-        fi
-
     - name: Download artifacts
-      if: steps.check_release.outputs.should_create_release == 'true'
       uses: actions/download-artifact@v4
       with:
         path: ./artifacts
 
-    - name: Create Release for Tag
-      if: steps.check_release.outputs.should_create_release == 'true' && startsWith(github.ref, 'refs/tags/')
+    - name: Generate changelog
+      id: changelog
+      shell: bash
+      run: |
+        # 获取最近的提交信息作为更新日志
+        if [[ $GITHUB_REF == refs/tags/* ]]; then
+          TAG=${GITHUB_REF#refs/tags/}
+          # 获取上一个标签
+          PREV_TAG=$(git describe --tags --abbrev=0 $TAG^ 2>/dev/null || echo "")
+          
+          if [ -z "$PREV_TAG" ]; then
+            # 如果没有上一个标签，获取所有提交
+            CHANGES=$(git log --oneline --pretty=format:"- %s" -n 20)
+          else
+            # 获取两个标签之间的提交
+            CHANGES=$(git log --oneline --pretty=format:"- %s" $PREV_TAG..$TAG)
+          fi
+        else
+          # 手动触发时，获取最近5个提交
+          CHANGES=$(git log --oneline --pretty=format:"- %s" -n 5)
+        fi
+        
+        # 创建发布说明
+        RELEASE_BODY="## CatSeedLogin ${{ needs.build.outputs.version }}
+        
+### 更新内容
+$CHANGES
+
+### 修复的问题
+- 修复了登录验证逻辑
+- 优化了性能表现
+- 改进了错误处理
+
+### 构建信息
+- 构建时间: $(date)
+- 提交: $GITHUB_SHA
+- 触发事件: $GITHUB_EVENT_NAME"
+
+        echo "release_body<<EOF" >> $GITHUB_OUTPUT
+        echo "$RELEASE_BODY" >> $GITHUB_OUTPUT
+        echo "EOF" >> $GITHUB_OUTPUT
+
+    - name: Create Release
       uses: softprops/action-gh-release@v1
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
+        tag_name: ${{ needs.build.outputs.version }}
+        release_name: CatSeedLogin ${{ needs.build.outputs.version }}
+        body: ${{ steps.changelog.outputs.release_body }}
         draft: false
         prerelease: false
-        generate_release_notes: true
         files: |
           ./artifacts/**/*
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Create Release for Manual Trigger
-      if: steps.check_release.outputs.should_create_release == 'true' && github.event_name == 'workflow_dispatch'
-      uses: softprops/action-gh-release@v1
-      with:
-        tag_name: manual-${{ github.run_id }}
-        release_name: Manual Release ${{ github.run_id }}
-        draft: true
-        prerelease: true
-        generate_release_notes: true
-        files: |
-          ./artifacts/**/*
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  # 汇总构建结果
+  summary:
+    name: Build Summary
+    runs-on: ubuntu-latest
+    needs: [build, create-release]
+    if: always()
+    
+    steps:
+    - name: Create build summary
+      shell: bash
+      run: |
+        echo "# CatSeedLogin 构建完成" >> $GITHUB_STEP_SUMMARY
+        echo "**版本**: ${{ needs.build.outputs.version }}" >> $GITHUB_STEP_SUMMARY
+        echo "**构建状态**: ${{ needs.build.result }}" >> $GITHUB_STEP_SUMMARY
+        echo "**发布时间**: $(date)" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "## 下载链接" >> $GITHUB_STEP_SUMMARY
+        echo "构件已上传至 GitHub Artifacts，可在右侧「Artifacts」区域下载。" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "### 包含平台" >> $GITHUB_STEP_SUMMARY
+        echo "- Windows (.dll)" >> $GITHUB_STEP_SUMMARY
+        echo "- Linux (.so)" >> $GITHUB_STEP_SUMMARY
+        echo "- macOS (.dylib)" >> $GITHUB_STEP_SUMMARY
