--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,11 +1,18 @@
-name: Build and Release Rust Library
+name: Build CatSeedLogin Plugin
 
 on:
   push:
-    branches: [ main ]  # 主分支推送时构建
-  workflow_dispatch:     # 允许手动触发
-  release:
-    types: [published]  # 当创建发布时触发
+    branches: [ main ]
+  workflow_dispatch:  # 允许手动触发
+    inputs:
+      version:
+        description: '版本号 (例如: 0.0.1)'
+        required: true
+        default: '0.0.1'
+      changelog:
+        description: '更新内容 (修复的bug和新增功能)'
+        required: true
+        default: '修复已知问题，优化性能'
 
 env:
   CARGO_NET_GIT_FETCH_WITH_CLI: true
@@ -13,7 +20,7 @@ env:
 
 jobs:
   build:
-    name: Build for ${{ matrix.os }} (${{ matrix.target }})
+    name: Build for ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     
     strategy:
@@ -21,59 +28,23 @@ jobs:
         include:
           - os: windows-latest
             target: x86_64-pc-windows-msvc
-            artifact_name: windows
+            platform: windows
             file_extension: dll
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-            artifact_name: linux
+            platform: linux
             file_extension: so
           - os: macos-latest
             target: x86_64-apple-darwin
-            artifact_name: macos
+            platform: macos
             file_extension: dylib
       fail-fast: false
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-      with:
-        fetch-depth: 0  # 获取所有提交历史用于版本计算
 
-    - name: Get version from tag or generate
-      id: get_version
-      shell: bash
-      run: |
-        # 如果有标签，使用标签版本
-        if [[ $GITHUB_REF == refs/tags/* ]]; then
-          VERSION=${GITHUB_REF#refs/tags/}
-          echo "Using tag version: $VERSION"
-        # 如果是发布事件，使用发布版本
-        elif [[ $GITHUB_EVENT_NAME == "release" ]]; then
-          VERSION=${{ github.event.release.tag_name }}
-          echo "Using release version: $VERSION"
-        else
-          # 否则自动生成版本号（从v0.0.1开始递增）
-          LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
-          echo "Latest tag: $LATEST_TAG"
-          
-          # 提取版本号并递增
-          if [[ $LATEST_TAG =~ ^v([0-9]+)\.([0-9]+)\.([0-9]+)$ ]]; then
-            MAJOR=${BASH_REMATCH[1]}
-            MINOR=${BASH_REMATCH[2]}
-            PATCH=${BASH_REMATCH[3]}
-            PATCH=$((PATCH + 1))
-            VERSION="v${MAJOR}.${MINOR}.${PATCH}"
-          else
-            # 如果没有有效标签，从v0.0.1开始
-            VERSION="v0.0.1"
-          fi
-          echo "Generated version: $VERSION"
-        fi
-        
-        echo "version=$VERSION" >> $GITHUB_OUTPUT
-        echo "Final version: $VERSION"
-
-    - name: Install Rust
+    - name: Setup Rust
       uses: actions-rust-lang/setup-rust-toolchain@v1
       with:
         toolchain: stable
@@ -83,21 +54,10 @@ jobs:
     - name: Add Rust target
       run: rustup target add ${{ matrix.target }}
 
-    - name: Cache dependencies
-      uses: actions/cache@v3
-      with:
-        path: |
-          ~/.cargo/registry
-          ~/.cargo/git
-          target
-        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-cargo-
-
     - name: Build release
       run: cargo build --release --target ${{ matrix.target }}
 
-    - name: Find and prepare library file
+    - name: Find library file
       shell: bash
       run: |
         # 查找构建出的库文件
@@ -110,118 +70,99 @@ jobs:
         fi
         
         if [ -z "$LIB_FILE" ]; then
-          echo "No library file found, checking all files:"
+          echo "❌ 未找到库文件，检查所有文件:"
           find target/${{ matrix.target }}/release -type f
           exit 1
         fi
         
-        echo "Found library: $LIB_FILE"
+        echo "✅ 找到库文件: $LIB_FILE"
         
         # 准备文件名
-        PACKAGE_NAME=$(cargo metadata --no-deps --format-version=1 | jq -r '.packages[0].name' 2>/dev/null || echo "CatSeedLogin")
-        ARTIFACT_NAME="${PACKAGE_NAME}_${{ matrix.artifact_name }}_${{ steps.get_version.outputs.version }}.${{ matrix.file_extension }}"
+        VERSION="${{ github.event.inputs.version || '0.0.1' }}"
+        ARTIFACT_NAME="CatSeedLogin_v${VERSION}_${{ matrix.platform }}.${{ matrix.file_extension }}"
         
         mkdir -p dist
         cp "$LIB_FILE" "dist/$ARTIFACT_NAME"
         echo "artifact_name=$ARTIFACT_NAME" >> $GITHUB_ENV
-        echo "version=${{ steps.get_version.outputs.version }}" >> $GITHUB_ENV
+        echo "version=$VERSION" >> $GITHUB_ENV
 
-    - name: Upload to GitHub Artifacts
+    - name: Upload to CI Artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: CatSeedLogin-${{ steps.get_version.outputs.version }}-${{ matrix.artifact_name }}
+        name: CatSeedLogin-v${{ env.version }}-${{ matrix.platform }}
         path: dist/${{ env.artifact_name }}
-        retention-days: 30
+        retention-days: 90
 
-  # 创建 GitHub Release（可选，如果仍需发布）
-  create-release:
-    name: Create GitHub Release
+  create-summary:
+    name: Create Build Summary
     runs-on: ubuntu-latest
     needs: build
-    # 只在有标签或发布事件时创建Release
-    if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'release'
-    
-    steps:
-    - name: Download artifacts
-      uses: actions/download-artifact@v4
-      with:
-        path: ./artifacts
-
-    - name: Generate changelog
-      id: changelog
-      shell: bash
-      run: |
-        # 获取最近的提交信息作为更新日志
-        if [[ $GITHUB_REF == refs/tags/* ]]; then
-          TAG=${GITHUB_REF#refs/tags/}
-          # 获取上一个标签
-          PREV_TAG=$(git describe --tags --abbrev=0 $TAG^ 2>/dev/null || echo "")
-          
-          if [ -z "$PREV_TAG" ]; then
-            # 如果没有上一个标签，获取所有提交
-            CHANGES=$(git log --oneline --pretty=format:"- %s" -n 20)
-          else
-            # 获取两个标签之间的提交
-            CHANGES=$(git log --oneline --pretty=format:"- %s" $PREV_TAG..$TAG)
-          fi
-        else
-          # 手动触发时，获取最近5个提交
-          CHANGES=$(git log --oneline --pretty=format:"- %s" -n 5)
-        fi
-        
-        # 创建发布说明
-        RELEASE_BODY="## CatSeedLogin ${{ needs.build.outputs.version }}
-        
-### 更新内容
-$CHANGES
-
-### 修复的问题
-- 修复了登录验证逻辑
-- 优化了性能表现
-- 改进了错误处理
-
-### 构建信息
-- 构建时间: $(date)
-- 提交: $GITHUB_SHA
-- 触发事件: $GITHUB_EVENT_NAME"
-
-        echo "release_body<<EOF" >> $GITHUB_OUTPUT
-        echo "$RELEASE_BODY" >> $GITHUB_OUTPUT
-        echo "EOF" >> $GITHUB_OUTPUT
-
-    - name: Create Release
-      uses: softprops/action-gh-release@v1
-      with:
-        tag_name: ${{ needs.build.outputs.version }}
-        release_name: CatSeedLogin ${{ needs.build.outputs.version }}
-        body: ${{ steps.changelog.outputs.release_body }}
-        draft: false
-        prerelease: false
-        files: |
-          ./artifacts/**/*
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  # 汇总构建结果
-  summary:
-    name: Build Summary
-    runs-on: ubuntu-latest
-    needs: [build, create-release]
     if: always()
     
     steps:
-    - name: Create build summary
+    - name: Download all artifacts
+      uses: actions/download-artifact@v4
+      with:
+        path: ./artifacts
+        pattern: CatSeedLogin-*
+        merge-multiple: true
+
+    - name: Create summary
       shell: bash
       run: |
-        echo "# CatSeedLogin 构建完成" >> $GITHUB_STEP_SUMMARY
-        echo "**版本**: ${{ needs.build.outputs.version }}" >> $GITHUB_STEP_SUMMARY
-        echo "**构建状态**: ${{ needs.build.result }}" >> $GITHUB_STEP_SUMMARY
-        echo "**发布时间**: $(date)" >> $GITHUB_STEP_SUMMARY
+        VERSION="${{ github.event.inputs.version || '0.0.1' }}"
+        CHANGELOG="${{ github.event.inputs.changelog || '修复已知问题，优化性能' }}"
+        
+        echo "# 🐱 CatSeedLogin v${VERSION} 构建完成" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
-        echo "## 下载链接" >> $GITHUB_STEP_SUMMARY
-        echo "构件已上传至 GitHub Artifacts，可在右侧「Artifacts」区域下载。" >> $GITHUB_STEP_SUMMARY
+        echo "## 📋 构建信息" >> $GITHUB_STEP_SUMMARY
+        echo "- **版本**: v${VERSION}" >> $GITHUB_STEP_SUMMARY
+        echo "- **构建时间**: $(date +'%Y-%m-%d %H:%M:%S')" >> $GITHUB_STEP_SUMMARY
+        echo "- **触发方式**: ${{ github.event_name }}" >> $GITHUB_STEP_SUMMARY
+        echo "- **提交**: ${GITHUB_SHA:0:7}" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
-        echo "### 包含平台" >> $GITHUB_STEP_SUMMARY
-        echo "- Windows (.dll)" >> $GITHUB_STEP_SUMMARY
-        echo "- Linux (.so)" >> $GITHUB_STEP_SUMMARY
-        echo "- macOS (.dylib)" >> $GITHUB_STEP_SUMMARY
+        
+        echo "## 🔧 更新内容" >> $GITHUB_STEP_SUMMARY
+        echo "$CHANGELOG" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        
+        echo "## 📦 下载链接" >> $GITHUB_STEP_SUMMARY
+        echo "构件已上传至 GitHub Actions Artifacts，可在右侧「Artifacts」区域下载：" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        
+        # 列出所有构建的文件
+        echo "### 可用平台:" >> $GITHUB_STEP_SUMMARY
+        if [ -f "./artifacts/CatSeedLogin_v${VERSION}_windows.dll" ]; then
+          echo "- ✅ Windows (x64) - CatSeedLogin_v${VERSION}_windows.dll" >> $GITHUB_STEP_SUMMARY
+        else
+          echo "- ❌ Windows 构建失败" >> $GITHUB_STEP_SUMMARY
+        fi
+        
+        if [ -f "./artifacts/CatSeedLogin_v${VERSION}_linux.so" ]; then
+          echo "- ✅ Linux (x64) - CatSeedLogin_v${VERSION}_linux.so" >> $GITHUB_STEP_SUMMARY
+        else
+          echo "- ❌ Linux 构建失败" >> $GITHUB_STEP_SUMMARY
+        fi
+        
+        if [ -f "./artifacts/CatSeedLogin_v${VERSION}_macos.dylib" ]; then
+          echo "- ✅ macOS (x64) - CatSeedLogin_v${VERSION}_macos.dylib" >> $GITHUB_STEP_SUMMARY
+        else
+          echo "- ❌ macOS 构建失败" >> $GITHUB_STEP_SUMMARY
+        fi
+        
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "## 🚀 使用说明" >> $GITHUB_STEP_SUMMARY
+        echo "1. 下载对应平台的库文件" >> $GITHUB_STEP_SUMMARY
+        echo "2. 将文件放入 Pumpkin 服务器的 plugins 目录" >> $GITHUB_STEP_SUMMARY
+        echo "3. 重启服务器" >> $GITHUB_STEP_SUMMARY
+        
+        # 同时输出到日志
+        echo "构建完成: CatSeedLogin v${VERSION}"
+        echo "更新内容: ${CHANGELOG}"
+
+    - name: Upload summary as artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: build-summary-v${{ github.event.inputs.version || '0.0.1' }}
+        path: $GITHUB_STEP_SUMMARY
+        retention-days: 30
