ci: 简化 Rust 工作流配置
移除 setup-rust-toolchain 步骤，直接使用默认工具链构建

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -31,12 +31,8 @@ jobs:
         VERSION=$(grep -E '^version\s*=' Cargo.toml | cut -d'"' -f2)
         echo "version=$VERSION" >> $GITHUB_ENV
 
-    - uses: actions-rust-lang/setup-rust-toolchain@v1
-      with:
-        toolchain: stable
-        profile: minimal
-
-    - run: cargo build --release
+    - name: Build
+      run: cargo build --release
 
     - name: Copy artifact
       run: |
